[metadata]
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: BSD 1-clause
    Intended Audience :: Web Developers
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Framework :: AsyncIO

[options]
zip_safe = false
python_requires = ~=3.6
packages = find:
include_package_data = false
install_requires =
    qasync
    attrs
    typing-extensions ; python_version < '3.8'

[options.entry_points]
console_scripts =
    phantompy = phantompy.__main__:iMain

[easy_install]
zip_ok = false

[flake8]
jobs = 1
max-line-length = 88
ignore =
    E111
    E114
    E225
    E261
    E302
    E305
    E402
    E501
    E502
    E541
    E701
    E722
    E741
    F541

